[tool.poetry]
name = "yaset"
version = "0.1.0"
description = "Fast and Accurate Sequence Tagger"
license = "GPL-3.0"
authors = ["Julien Tourille <julien.tourille@gmail.com>"]
packages = [
    { include = "yaset", from = "src" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
torch = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
yaset = 'yaset.yaset:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | templates
)/
'''


